--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 			<version>8.0.22</version>
 		</dependency>
